# obsidian-smart-vault

./: .eslintrc.js  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  config_dump.json  deploy.mjs  esbuild.config.mjs  eslint.config.js  lint_output.txt  main.js  manifest.json  package-lock.json  package.json  styles.css  task_cc.md  tsc_errors.txt  tsconfig.json  versions.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml  release.yml  validator.yml
docs/: architecture.md  configuration.md  handwritten-notes.md  link-suggestions.md  smart-chat.md  smart-formatting.md  smart-organization.md  troubleshooting.md
src/: cache.rs  constants.ts  embeddings.rs  lib.rs  links.rs  llm.rs  main.ts  prompts.ts  vault.rs
src/editor/: InlineSuggestionExtension.ts
src/llm/: RerankerService.ts  types.ts
src/plugin/: SmartVaultPlugin.ts
src/plugin/cache/: CacheManager.ts  types.ts
src/plugin/scanning/: FileProcessor.ts  HandwrittenNoteWatcher.ts  VaultScanner.ts
src/settings/: SmartVaultSettings.ts  types.ts
src/suggest/: InlineLinkSuggest.ts
src/types/: assets.d.ts
src/ui/: ConfirmModal.ts  LinkSuggestionView.ts
src/ui/tabs/: BaseTab.ts  ChatTab.ts  FormattingTab.ts  OrganizationTab.ts  SuggestionTab.ts
src/utils/: content.ts
