[package]
name = "obsidian-smart-vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"  # MessagePack for binary serialization
console_error_panic_hook = "0.1"
wee_alloc = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Response",
    "Request",
    "RequestInit",
    "RequestMode",
    "Headers",
] }
wasm-bindgen-futures = "0.4"
gloo-net = "0.6"
serde-wasm-bindgen = "0.6"
regex = "1.10"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
